syntax = "proto3";

package validator;

option java_package = "com.proto.validator";
option java_multiple_files = true;


message Validation{
  string postal_code = 1;
  string province = 2;
}

message ValidationRequest{
  Validation request = 1;
}

message ValidationResponse{
  int32 result = 1;
  string propuesta = 2;
}

service ValidationService{
  // Operacion unaria
  rpc Validate(ValidationRequest) returns (ValidationResponse);
}